--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Млинці з мʼясом</div>
-									<div class="doggie__price">67 грн. (шт. 100 г)</div>
+									<div class="doggie__price">67 грн. (1 шт. 100 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Млинці з творогом та полуничним джемом</div>
-									<div class="doggie__price">47 грн. (шт. 100 г)</div>
+									<div class="doggie__price">47 грн. (1 шт. 100 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Сирники з джемом</div>
-									<div class="doggie__price">77 грн. ( порція 4 шт.)</div>
+									<div class="doggie__price">77 грн. (порція 4 шт.)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Смажена цвітна капуста</div>
