--- a/index.html
+++ b/index.html
@@ -32,12 +32,28 @@
 									<div class="doggie__price">47 грн. (1 шт. 100 г)</div>
 								</div>
 								<div class="doggie__item">
-									<div class="doggie__name">Сирники з джемом</div>
-									<div class="doggie__price">77 грн. (порція 4 шт.)</div>
+									<div class="doggie__name">Сирники</div>
+									<div class="doggie__price">79 грн. (порція 4 шт. 200 г)</div>
+								</div>
+								<div class="doggie__item">
+									<div class="doggie__name">Джем</div>
+									<div class="doggie__price">15 грн. (порція 50 г)</div>
+								</div>
+								<div class="doggie__item">
+									<div class="doggie__name">Сметана</div>
+									<div class="doggie__price">15 грн. (порція 50 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Вінігрет</div>
 									<div class="doggie__price">47 грн. (150 г)</div>
+								</div>
+								<div class="doggie__item">
+									<div class="doggie__name">Салат з буряком</div>
+									<div class="doggie__price">54 грн. (150 г)</div>
+								</div>
+								<div class="doggie__item">
+									<div class="doggie__name">Салат з гарбузом</div>
+									<div class="doggie__price">54 грн. (150 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Борщ на яловичині біфстроганов з пампушками</div>
@@ -48,32 +64,32 @@
 									<div class="doggie__price">77 грн. (350 г)</div>
 								</div>
 								<div class="doggie__item">
-									<div class="doggie__name">Бульйон яловичий з фрикадельками</div>
-									<div class="doggie__price">77 грн. (350 г)</div>
-								</div>
-								<div class="doggie__item">
 									<div class="doggie__name">Гороховий суп</div>
 									<div class="doggie__price">77 грн. (350 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Котлета по-київські</div>
-									<div class="doggie__price">82 грн. (1 шт.)</div>
+									<div class="doggie__price">82 грн. (1 шт. 170 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Котлета асорті</div>
-									<div class="doggie__price">72 грн. (1 шт.)</div>
+									<div class="doggie__price">62 грн. (1 шт. 100 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Котлета куряча</div>
-									<div class="doggie__price">67 грн. (1 шт.)</div>
+									<div class="doggie__price">48 грн. (1 шт. 100 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Млинці з мʼясом</div>
-									<div class="doggie__price">67 грн. (1 шт. 100 г)</div>
+									<div class="doggie__price">48 грн. (1 шт. 100 г)</div>
 								</div>
 								<div class="doggie__item">
-									<div class="doggie__name">Гратен картопляний</div>
-									<div class="doggie__price">62 грн. (порція)</div>
+									<div class="doggie__name">Рис з овочами</div>
+									<div class="doggie__price">47 грн. (180 г)</div>
+								</div>
+								<div class="doggie__item">
+									<div class="doggie__name">Картопляне пюре з сиром</div>
+									<div class="doggie__price">47 грн. (180 г)</div>
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Деруни</div>
@@ -89,7 +105,7 @@
 								</div>
 								<div class="doggie__item">
 									<div class="doggie__name">Смажена цвітна капуста</div>
-									<div class="doggie__price">67 грн. (порція 180 г)</div>
+									<div class="doggie__price">67 грн. (180 г)</div>
 								</div>
 							</div>
 						</div>
