--- a/index.html
+++ b/index.html
@@ -13,99 +13,104 @@
 	<div class="wrapper">
 		<main class="header">
 
-			<div class="doggie">
-				<div class="doggie__container">
-					<div class="doggie__body">
-						<div class="doggie__top">
-							<div class="doggie__header">
-								<div class="doggie__logo-box">
-									<a href=""><img src="img/logo_lk.png" alt="logo" class="doggie__logo"></a>
-									<div class="doggie__main-title"><a href="">Menu</a></div>
+			<div class="lazy">
+				<div class="lazy__container">
+					<div class="lazy__body">
+						<div class="lazy__top">
+							<div class="lazy__header">
+								<div class="lazy__logo-box">
+									<a href="#">
+										<picture>
+											<source srcset="img/logo_lk.webp" type="image/webp">
+											<img src="img/logo_lk.png" alt="logo" class="lazy__logo">
+										</picture>
+									</a>
+									<div class="lazy__main-title"><a href="">Menu</a></div>
 								</div>
 							</div>
 						</div>
 
-						<div class="doggie__navigation">
-							<div class="doggie__list">
-								<div class="doggie__item">
-									<div class="doggie__name">Млинці з творогом та полуничним джемом</div>
-									<div class="doggie__price">47 грн. (1 шт. 100 г)</div>
+						<div class="lazy__navigation">
+							<div class="lazy__list">
+								<div class="lazy__item">
+									<div class="lazy__name">Млинці з творогом та полуничним джемом</div>
+									<div class="lazy__price">47 грн. (1 шт. 100 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Сирники</div>
-									<div class="doggie__price">79 грн. (порція 4 шт. 200 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Сирники</div>
+									<div class="lazy__price">79 грн. (порція 4 шт. 200 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Джем</div>
-									<div class="doggie__price">15 грн. (порція 50 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Джем</div>
+									<div class="lazy__price">15 грн. (порція 50 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Сметана</div>
-									<div class="doggie__price">15 грн. (порція 50 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Сметана</div>
+									<div class="lazy__price">15 грн. (порція 50 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Вінігрет</div>
-									<div class="doggie__price">47 грн. (150 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Вінігрет</div>
+									<div class="lazy__price">47 грн. (150 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Салат з буряком</div>
-									<div class="doggie__price">54 грн. (150 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Салат з буряком</div>
+									<div class="lazy__price">54 грн. (150 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Салат з гарбузом</div>
-									<div class="doggie__price">54 грн. (150 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Салат з гарбузом</div>
+									<div class="lazy__price">54 грн. (150 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Борщ на яловичині біфстроганов з пампушками</div>
-									<div class="doggie__price">77 грн. (350 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Борщ на яловичині біфстроганов з пампушками</div>
+									<div class="lazy__price">77 грн. (350 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Бульйон курячий з фрикадельками</div>
-									<div class="doggie__price">77 грн. (350 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Бульйон курячий з фрикадельками</div>
+									<div class="lazy__price">77 грн. (350 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Гороховий суп</div>
-									<div class="doggie__price">77 грн. (350 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Гороховий суп</div>
+									<div class="lazy__price">77 грн. (350 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Котлета по-київські</div>
-									<div class="doggie__price">82 грн. (1 шт. 170 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Котлета по-київські</div>
+									<div class="lazy__price">82 грн. (1 шт. 170 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Котлета асорті</div>
-									<div class="doggie__price">62 грн. (1 шт. 100 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Котлета асорті</div>
+									<div class="lazy__price">62 грн. (1 шт. 100 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Котлета куряча</div>
-									<div class="doggie__price">48 грн. (1 шт. 100 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Котлета куряча</div>
+									<div class="lazy__price">48 грн. (1 шт. 100 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Млинці з мʼясом</div>
-									<div class="doggie__price">48 грн. (1 шт. 100 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Млинці з мʼясом</div>
+									<div class="lazy__price">48 грн. (1 шт. 100 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Рис з овочами</div>
-									<div class="doggie__price">47 грн. (180 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Рис з овочами</div>
+									<div class="lazy__price">47 грн. (180 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Картопляне пюре з сиром</div>
-									<div class="doggie__price">47 грн. (180 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Картопляне пюре з сиром</div>
+									<div class="lazy__price">47 грн. (180 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Деруни</div>
-									<div class="doggie__price">62 грн. (4 шт.)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Деруни</div>
+									<div class="lazy__price">62 грн. (4 шт.)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Картопляні зрази з капустою</div>
-									<div class="doggie__price">42 грн. (1 шт. 120 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Картопляні зрази з капустою</div>
+									<div class="lazy__price">42 грн. (1 шт. 120 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Картопляні зрази з мʼясом</div>
-									<div class="doggie__price">52 грн. (1 шт. 120 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Картопляні зрази з мʼясом</div>
+									<div class="lazy__price">52 грн. (1 шт. 120 г)</div>
 								</div>
-								<div class="doggie__item">
-									<div class="doggie__name">Смажена цвітна капуста</div>
-									<div class="doggie__price">67 грн. (180 г)</div>
+								<div class="lazy__item">
+									<div class="lazy__name">Смажена цвітна капуста</div>
+									<div class="lazy__price">67 грн. (180 г)</div>
 								</div>
 							</div>
 						</div>
