--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 								<div class="lazy__logo-box">
 									<a href="#">
 										<picture>
-											<source srcset="img/logo_lk.webp" type="image/webp">
+											<source srcset="img/logo_lk.webp" class="lazy__logo">
 											<img src="img/logo_lk.png" alt="logo" class="lazy__logo">
 										</picture>
 									</a>
