--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 								<div class="lazy__logo-box">
 									<a href="#">
 										<picture>
-											<source srcset="img/logo_lk.webp" class="lazy__logo">
-											<img src="img/logo_lk.png" alt="logo" class="lazy__logo">
+											<source srcset="img/logo_lk.webp" type="image/webp">
+											<img class="lazy__logo" src="img/logo_lk.png" alt="logo">
 										</picture>
 									</a>
 									<div class="lazy__main-title"><a href="">Menu</a></div>
