--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
 									<div class="lazy__price">54 грн. (150 г)</div>
 								</div>
 								<div class="lazy__item">
-									<div class="lazy__name">Салат з гарбузом</div>
-									<div class="lazy__price">54 грн. (150 г)</div>
-								</div>
-								<div class="lazy__item">
 									<div class="lazy__name">Борщ на яловичині біфстроганов з пампушками</div>
 									<div class="lazy__price">77 грн. (350 г)</div>
 								</div>
@@ -93,7 +89,7 @@
 									<div class="lazy__price">47 грн. (180 г)</div>
 								</div>
 								<div class="lazy__item">
-									<div class="lazy__name">Картопляне пюре з сиром</div>
+									<div class="lazy__name">Картопляне пюре</div>
 									<div class="lazy__price">47 грн. (180 г)</div>
 								</div>
 								<div class="lazy__item">
